# smart_diffbot

./: .gitignore  .gitmodules  README.md
smart_diffbot_bringup/: CMakeLists.txt  package.xml
smart_diffbot_bringup/launch/: gazebo_world.launch.py  hardware.launch.py  main.launch.py  simulation.launch.py
smart_diffbot_bringup/launch/examples/: multi_robot_sim_example.launch.py  single_robot_sim_example.launch.py
smart_diffbot_bringup/worlds/: docking_world.sdf  empty_world.sdf  test_world.sdf
smart_diffbot_bringup/worlds/costmaps/: docking_world.yaml  empty_world.yaml
smart_diffbot_clients/: package.xml  setup.cfg  setup.py
smart_diffbot_clients/smart_diffbot_clients/: docking_client.py  line_follow_client.py
smart_diffbot_control/: CMakeLists.txt  package.xml
smart_diffbot_control/config/: controller_params.yaml
smart_diffbot_control/launch/: control.launch.py  rviz.launch.py
smart_diffbot_control/launch/rviz/: monitor_control.rviz
smart_diffbot_description/: CMakeLists.txt  package.xml
smart_diffbot_description/launch/: rviz.launch.py
smart_diffbot_description/launch/rviz/: view_model.rviz
smart_diffbot_description/model/urdf/: model.urdf.xacro  real_hardware_interface.urdf.xacro  robot.urdf.xacro  sim_hardware_interface.urdf.xacro  utils.urdf.xacro
smart_diffbot_hardware/: CMakeLists.txt  hardware_plugins.xml  package.xml
smart_diffbot_hardware/include/smart_diffbot_hardware/: dc_motor_velocity_interface.hpp
smart_diffbot_hardware/src/: dc_motor_velocity_interface.cpp
smart_diffbot_localization/: CMakeLists.txt  package.xml
smart_diffbot_localization/config/: localization_params.yaml
smart_diffbot_localization/launch/: localization.launch.py  rviz.launch.py
smart_diffbot_localization/launch/rviz/: monitor_localization.rviz
smart_diffbot_msgs/: CMakeLists.txt  package.xml
smart_diffbot_msgs/action/: ApproachDock.action  Dock.action  FollowLine.action
smart_diffbot_navigation/: CMakeLists.txt  behavior_plugins.xml  bt_plugins.xml  package.xml  planner_plugins.xml
smart_diffbot_navigation/behavior_trees/: navigate_docking.xml  navigate_line_following.xml  navigate_through_poses_plan_once_straightline.xml  navigate_through_poses_w_simple_recovery.xml  navigate_to_pose_w_simple_recovery.xml
smart_diffbot_navigation/config/: navigation_params.yaml
smart_diffbot_navigation/include/smart_diffbot_navigation/behavior_plugins/: approach_dock.hpp  dock.hpp  follow_line.hpp
smart_diffbot_navigation/include/smart_diffbot_navigation/bt_plugins/: approach_dock_action.hpp  dock_action.hpp  follow_line_action.hpp
smart_diffbot_navigation/include/smart_diffbot_navigation/planner_plugins/: straight_line_planner.hpp
smart_diffbot_navigation/launch/: navigation.launch.py  rviz.launch.py
smart_diffbot_navigation/launch/rviz/: monitor_navigation.rviz
smart_diffbot_navigation/src/behavior_plugins/: approach_dock.cpp  dock.cpp  follow_line.cpp
smart_diffbot_navigation/src/bt_plugins/: approach_dock_action.cpp  dock_action.cpp  follow_line_action.cpp
smart_diffbot_navigation/src/planner_plugins/: straight_line_planner.cpp
smart_diffbot_scripts/: package.xml  setup.cfg  setup.py
smart_diffbot_scripts/smart_diffbot_scripts/: line_detection.py
