<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_diffbot_clients</name>
  <version>1.0.0</version>
  <description>Clients package of smart_diffbot</description>
  <maintainer email="k.j.vanteeffelen@saxion.nl">Kees van Teeffelen</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
